# rusterizer

./: Cargo.toml  Makefile.toml  README.md  output.ppm
src/: main.rs  vec3f.rs
src/parser/: common.rs  mod.rs  obj_line.rs  obj_parser.rs  parparparser.rs
src/structs/: face.rs  mod.rs  model.rs  obj.rs  ppmimage.rs  renderer.rs  types.rs
src/structs/image/: glob_image.rs  mod.rs  ppmimage.rs
src/tests/: mod.rs  obj.rs  vec3f.rs
