[package]
name = "rusterizer"
version = "0.1.0"
authors = [
  "s3rius <win10@list.ru>",
  "Kolaer <overlordin777@gmail.com>",
  "ussr-jesus <groundhog448@gmail.com>"
]
edition = "2018"

[dependencies]
nom = "^4.2" # https://docs.rs/nom/4.2.0/nom/
nalgebra = "0.17.2"
rand = "0.6.5"

[dev-dependencies]
quickcheck = "0.8" # https://docs.rs/quickcheck/0.8.1/quickcheck/
quickcheck_macros = "0.8" # https://docs.rs/quickcheck_macros/0.8.0/quickcheck_macros/
